welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: Boolean does not take parameters
	if (vuBiscuit() == true) {
                     ^Program:14: error: not found: value vuBiscuit
		vuBiscuit()=true;
                ^